<resources>
    <string name="app_name">SmartWaiter</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_meal">Add Meal</string>
    <string name="choose_a_photo">Choose a photo</string>
    <string name="name_of_the_item"> Name of the item</string>
    <string name="price"> Price</string>
    <string name="description"> Description</string>
    <string name="add_item">Add item</string>
    <string name="Toast_please_fill">Please fill in all the fields!</string>
    <string name="itemadded">The item has been added to the menu</string>
    <string name="dostupno">Available:</string>
    <string name="uredi">Edit</string>
    <string name="naru_i">Order</string>
    <string name="save_changes">Save changes</string>
    <string name="currency">%s HRK</string>
    <string name="multiplier">%sx</string>
    <string name="add_tags">Enter tags</string>
    <string name="all_items">Sve</string>
    <string name="complete_order">Complete Order</string>
    <string name="final_price">Total Price: %s HRK</string>
    <string name="msg_subscribed">Topic subscription succeeded</string>
    <string name="msg_subscribe_failed">Topic subscription failed</string>
    <string name="channel_name">FirebaseCloudMessaging notification channel</string>
</resources>