<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:TagsEditText="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.restaurant.editMeal.EditMealFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/EditMealContent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageViewMealEdit"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/meal_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <Button
                android:id="@+id/btnChoosePhotoEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_button_style_primary"
                android:text="@string/choose_a_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewMealEdit"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/textMealNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:hint="@string/name_of_the_item"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnChoosePhotoEdit"
                android:drawablePadding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                />

            <EditText
                android:id="@+id/textMealDescriptionEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textMealNameEdit"
                android:drawablePadding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:padding="10dp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/textMealPriceEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_edit_text"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textMealDescriptionEdit" />

            <mabbas007.tagsedittext.TagsEditText
                android:id="@+id/tagsEditTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textMealPriceEdit"
                android:background="@drawable/rounded_edit_text"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:ems="10"
                android:layout_marginTop="5dp"
                android:hint="@string/add_tags"
                TagsEditText:allowSpaceInTag="true"
                TagsEditText:tagsCloseImageRight="@drawable/tag_close"
                TagsEditText:tagsBackground="@drawable/dot"
                TagsEditText:tagsTextColor="@color/white"
                TagsEditText:tagsTextSize="@dimen/defaultTagsTextSize"
                TagsEditText:tagsCloseImagePadding="@dimen/defaultTagsCloseImagePadding"
                app:tagsPaddingLeft="10dp"
                app:tagsPaddingRight="10dp"
                app:tagsPaddingBottom="5dp"
                app:tagsPaddingTop="5dp"
                />


            <Button
                android:id="@+id/btnEditItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_button_style_primary"
                android:text="@string/save_changes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tagsEditTextEdit"
                android:layout_marginTop="5dp"
                />
            <EditText
                android:id="@+id/imageTagHolder"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:background="@drawable/rounded_edit_text"
                android:visibility="invisible"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBarEditMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminateTint="@color/dark_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
